# dadgnn-shallow-comparison

./: README.md  pyproject.toml
results/tables/: ag_news_linear_svm_20251025_185859.json  ag_news_logistic_regression_20251025_185550.json  ag_news_multinomial_nb_20251025_190041.json  rotten_tomatoes_linear_svm_20251025_190125.json  rotten_tomatoes_logistic_regression_20251025_190113.json  rotten_tomatoes_multinomial_nb_20251025_190135.json  trec_linear_svm_20251025_191927.json  trec_logistic_regression_20251025_191919.json  trec_multinomial_nb_20251025_191934.json
src/: __init__.py  data.py  eval.py  models.py  run_experiment.py  vectorizer.py
